# BoPax

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
bopax/: __init__.py
bopax/algorithms/: __init__.py  base.py  exhaustive.py  greedy.py  hybrid.py  optimal.py
bopax/loaders/: __init__.py  csv_loader.py
bopax/models/: __init__.py  box.py  container.py
bopax/utils/: __init__.py
bopax/validation/: __init__.py  validator.py
bopax/visualization/: __init__.py  renderer.py
data/: packing_boxes.csv
examples/: basic_usage.py  compare_algorithms.py  sample_boxes.csv  sample_containers.csv
scripts/: run_packing.sh
tests/: __init__.py  test_algorithms.py  test_loaders.py  test_models.py
