[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bopax"
version = "1.0.0"
description = "3D Bin Packing Optimization Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/gvonness-apolitical/BoPax"
Repository = "https://github.com/gvonness-apolitical/BoPax"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov"]
